--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Index – Yann RICHARD</title>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="menu.css">
+
 </head>
 <body>
-<div class="dropdown-menu" id="menu-container"></div>
+<div id="menu-container"></div>
   <header>
     <h1 class="site-title">Yann RICHARD</h1>
     <p class="subtitle">Cadreur • Photographe • Captation & Événementiel</p>
