--- a/automobile.html
+++ b/automobile.html
@@ -5,9 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Automobile – Yann RICHARD</title>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="menu.css">
+
 </head>
 <body>
-<div class="dropdown-menu" id="menu-container"></div>
+<div id="menu-container"></div>
   <header>
     <h1 class="site-title">Automobile</h1>
     <p class="subtitle">Découvrez l'automobile sous tout les angles</p>
