--- a/ethan.html
+++ b/ethan.html
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Yann Portfolio Portraits - Ethan</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="menu.css">
 </head>
 <body>
-  <div class="dropdown-menu" id="menu-container"></div>
+<div id="menu-container"></div>
   <header>
     <h1 class="site-title">Portraits - Ethan</h1>
     <p class="subtitle">Découvrez les portraits de Ethan</p>
