new page + construction message

--- a/automobile.html
+++ b/automobile.html
@@ -22,7 +22,7 @@
         <div class="overlay"></div>
         <div class="cat-name">Japancar</div>
       </div>
-      <div class="cat-card" onclick="window.location.href='divers.html';">
+      <div class="cat-card" onclick="window.location.href='diverscar.html';">
         <img src="photos/cover/diverscar-cover.jpg" alt="Divers" />
         <div class="overlay"></div>
         <div class="cat-name">Divers</div>
