--- a/concert.html
+++ b/concert.html
@@ -26,6 +26,9 @@
       <!-- Ajoutez d'autres concerts ici -->
     </div>
   </section>
+  <footer>
+    <a href="index.html" style="color: var(--accent); text-decoration: none;">Retour à l'accueil</a>
+  </footer>
 
   <script src="menu.js"></script>
   <script src="lightbox.js"></script>
