--- a/automobile.html
+++ b/automobile.html
@@ -27,9 +27,17 @@
         <div class="overlay"></div>
         <div class="cat-name">Divers</div>
       </div>
+      <div class="cat-card" onclick="window.location.href='gpexplorer.html';">
+        <img src="photos/cover/gpe-cover.jpg" alt="GP Explorer" />
+        <div class="overlay"></div>
+        <div class="cat-name">GP Explorer</div>
+      </div>
       <!-- Ajoutez d'autres portraits ici -->
     </div>
   </section>
+  <footer>    
+    <a href="index.html" style="color: var(--accent); text-decoration: none;">Retour à l'accueil</a>
+  </footer>
   <script src="menu.js"></script>
   <script src="lightbox.js"></script>
   <script src="footer.js"></script>
