--- a/lajava.html
+++ b/lajava.html
@@ -1,44 +1,65 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Page en construction</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: "Inter", sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      background-color: #1a1a1a;
-      color: #fff;
-      text-align: center;
-    }
-    h1 {
-      font-size: 3rem;
-      margin-bottom: 1rem;
-    }
-    p {
-      font-size: 1.2rem;
-      color: #ccc;
-    }
-    a {
-      color: #fff;
-      text-decoration: underline;
-      margin-top: 20px;
-      display: inline-block;
-    }
-    a:hover {
-      color: #ddd;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Yann Portfolio Automobile - GP Explorer</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="menu.css">
 </head>
 <body>
-  <h1>🚧 Page en construction 🚧</h1>
-  <p>Cette page est actuellement en cours de création.</p>
-  <a href="index.html">← Retour à l'accueil</a>
+<div id="menu-container"></div>
+  <header>
+    <h1 class="site-title">Concert - La Java</h1>
+    <p class="subtitle">Découvrez mes photos de concert à la Java</p>
+  </header>
+<section>
+  <div class="gallery">
+    <div class="gallery-item" data-src="photos/concert/lajava/lajava1.jpg"><img src="photos/concert/lajava/lajava1.jpg" alt="La Java 1"></div>
+    <div class="gallery-item" data-src="photos/concert/lajava/lajava2.jpg"><img src="photos/concert/lajava/lajava2.jpg" alt="La Java 2"></div>
+    <div class="gallery-item" data-src="photos/concert/lajava/lajava3.jpg"><img src="photos/concert/lajava/lajava3.jpg" alt="La Java 3"></div>
+    <div class="gallery-item" data-src="photos/concert/lajava/lajava4.jpg"><img src="photos/concert/lajava/lajava4.jpg" alt="La Java 4"></div>
+    <div class="gallery-item" data-src="photos/concert/lajava/lajava5.jpg"><img src="photos/concert/lajava/lajava5.jpg" alt="La Java 5"></div>
+    <div class="gallery-item" data-src="photos/concert/lajava/lajava6.jpg"><img src="photos/concert/lajava/lajava6.jpg" alt="La Java 6"></div>
+    <div class="gallery-item" data-src="photos/concert/lajava/lajava7.jpg"><img src="photos/concert/lajava/lajava7.jpg" alt="La Java 7"></div>
+    <div class="gallery-item" data-src="photos/concert/lajava/lajava8.jpg"><img src="photos/concert/lajava/lajava8.jpg" alt="La Java 8"></div>
+    <div class="gallery-item" data-src="photos/concert/lajava/lajava9.jpg"><img src="photos/concert/lajava/lajava9.jpg" alt="La Java 9"></div>
+    <div class="gallery-item" data-src="photos/concert/lajava/lajava10.jpg"><img src="photos/concert/lajava/lajava10.jpg" alt="La Java 10"></div>
+    <div class="gallery-item" data-src="photos/concert/lajava/lajava11.jpg"><img src="photos/concert/lajava/lajava11.jpg" alt="La Java 11"></div>
+    <div class="gallery-item" data-src="photos/concert/lajava/lajava12.jpg"><img src="photos/concert/lajava/lajava12.jpg" alt="La Java 12"></div>
+    <div class="gallery-item" data-src="photos/concert/lajava/lajava13.jpg"><img src="photos/concert/lajava/lajava13.jpg" alt="La Java 13"></div>
+    <div class="gallery-item" data-src="photos/concert/lajava/lajava14.jpg"><img src="photos/concert/lajava/lajava14.jpg" alt="La Java 14"></div>
+    <div class="gallery-item" data-src="photos/concert/lajava/lajava15.jpg"><img src="photos/concert/lajava/lajava15.jpg" alt="La Java 15"></div>
+    <div class="gallery-item" data-src="photos/concert/lajava/lajava16.jpg"><img src="photos/concert/lajava/lajava16.jpg" alt="La Java 16"></div>
+    <div class="gallery-item" data-src="photos/concert/lajava/lajava17.jpg"><img src="photos/concert/lajava/lajava17.jpg" alt="La Java 17"></div>
+    <div class="gallery-item" data-src="photos/concert/lajava/lajava18.jpg"><img src="photos/concert/lajava/lajava18.jpg" alt="La Java 18"></div>
+    <div class="gallery-item" data-src="photos/concert/lajava/lajava19.jpg"><img src="photos/concert/lajava/lajava19.jpg" alt="La Java 19"></div>
+    <div class="gallery-item" data-src="photos/concert/lajava/lajava20.jpg"><img src="photos/concert/lajava/lajava20.jpg" alt="La Java 20"></div>
+    <div class="gallery-item" data-src="photos/concert/lajava/lajava21.jpg"><img src="photos/concert/lajava/lajava21.jpg" alt="La Java 21"></div>
+    <div class="gallery-item" data-src="photos/concert/lajava/lajava22.jpg"><img src="photos/concert/lajava/lajava22.jpg" alt="La Java 22"></div>
+    <div class="gallery-item" data-src="photos/concert/lajava/lajava23.jpg"><img src="photos/concert/lajava/lajava23.jpg" alt="La Java 23"></div>
+    <div class="gallery-item" data-src="photos/concert/lajava/lajava24.jpg"><img src="photos/concert/lajava/lajava24.jpg" alt="La Java 24"></div>
+    <div class="gallery-item" data-src="photos/concert/lajava/lajava25.jpg"><img src="photos/concert/lajava/lajava25.jpg" alt="La Java 25"></div>
+    <div class="gallery-item" data-src="photos/concert/lajava/lajava26.jpg"><img src="photos/concert/lajava/lajava26.jpg" alt="La Java 26"></div>
+    <div class="gallery-item" data-src="photos/concert/lajava/lajava27.jpg"><img src="photos/concert/lajava/lajava27.jpg" alt="La Java 27"></div>
+    <div class="gallery-item" data-src="photos/concert/lajava/lajava28.jpg"><img src="photos/concert/lajava/lajava28.jpg" alt="La Java 28"></div>
+  </div>
+</section>
+
+
+  <footer>
+    <a href="concert.html" style="color: var(--accent); text-decoration: none;">Retour aux concerts</a>
+  </footer>
+  <!-- Lightbox -->
+  <div id="lightbox">
+    <button id="prevBtn" class="lightbox-btn">&#10094;</button>
+    <img src="" alt="">
+    <button id="nextBtn" class="lightbox-btn">&#10095;</button>
+  </div>
+  <script src="menu.js"></script>
+  <script src="lightbox.js"></script>
+  <script src="footer.js"></script>
+  <script src="keyboard-control.js"></script>
+  <script src="media-protect.js"></script>
 </body>
 </html>
