--- a/lajava.html
+++ b/lajava.html
@@ -46,11 +46,10 @@
   </div>
 </section>
 
-
   <footer>
     <a href="concert.html" style="color: var(--accent); text-decoration: none;">Retour aux concerts</a>
   </footer>
-  <!-- Lightbox -->
+  <!-- LighStbox -->
   <div id="lightbox">
     <button id="prevBtn" class="lightbox-btn">&#10094;</button>
     <img src="" alt="">
