add video, update halo

--- a/automobile.html
+++ b/automobile.html
@@ -17,6 +17,11 @@
   <section>
     <h2>Mes Photos Automobile</h2>
     <div class="categories">
+      <div class="cat-card" onclick="window.location.href='videoauto.html';">
+        <img src="photos/cover/videoauto.jpg" alt="Vidéo Automobile" />
+        <div class="overlay"></div>
+        <div class="cat-name">Video Automobile</div>
+      </div>
       <div class="cat-card" onclick="window.location.href='japancar.html';">
         <img src="photos/cover/japancar-cover.jpg" alt="Japan'Car" />
         <div class="overlay"></div>
@@ -43,5 +48,7 @@
   <script src="footer.js"></script>
   <script src="keyboard-control.js"></script>
   <script src="media-protect.js"></script>
+  <script src="video-container.js"></script>
+  <script src="halo.js"></script>
 </body>
 </html>
