--- a/videoauto.html
+++ b/videoauto.html
@@ -46,19 +46,11 @@
           </video>
           <div class="halo"></div>
         </div>
-        <p class="video-title">Teaser – Événement mécanique</p>
+        <p class="video-title">Teaser – Événement Auto</p>
       </div>
 
       <!-- Vidéo 3 -->
-      <div class="video-item">
-        <div class="video-container video-strong" >
-          <video controls preload="metadata" poster="photos/cover/auto3.jpg">
-            <source src="videos/auto3.mp4" type="video/mp4" />
-          </video>
-          <div class="halo"></div>
-        </div>
-        <p class="video-title">Portrait automobile</p>
-      </div>
+ 
 
     </div>
   </section>
