--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <header>
     <h1 class="site-title">Yann RICHARD</h1>
     <p class="subtitle">Cadreur • Photographe • Captation & Événementiel</p>
+   <div class="header-photo">
+      <img src="photos/moi.jpg" alt="Yann Richard">
+   </div>
   </header>
 
   <!-- À propos -->
