--- a/japancar.html
+++ b/japancar.html
@@ -40,5 +40,7 @@
   <h1>🚧 Page en construction 🚧</h1>
   <p>Cette page est actuellement en cours de création.</p>
   <a href="index.html">← Retour à l'accueil</a>
+  <script src="js/main.js"></script>
+
 </body>
 </html>
