--- a/concert.html
+++ b/concert.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Concerts – Yann RICHARD</title>
-  <link rel="stylesheet" href="styles.css" />
-  <link rel="stylesheet" href="menu.css">
-
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="css/menu.css" />
+  <link rel="stylesheet" href="css/video-halo.css">
 </head>
 <body>
 <div id="menu-container"></div>
@@ -26,14 +26,10 @@
       <!-- Ajoutez d'autres concerts ici -->
     </div>
   </section>
-  <footer>
-    <a href="index.html" style="color: var(--accent); text-decoration: none;">Retour à l'accueil</a>
-  </footer>
+  <footer id="footer-container"></footer>
 
-  <script src="menu.js"></script>
-  <script src="lightbox.js"></script>
-  <script src="footer.js"></script>
-  <script src="keyboard-control.js"></script>
-  <script src="media-protect.js"></script>
+
+  <script src="js/main.js"></script>
+
 </body>
 </html>
