--- a/ethan.html
+++ b/ethan.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Yann Portfolio Portraits - Ethan</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="menu.css">
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="css/menu.css" />
+  <link rel="stylesheet" href="css/video-halo.css">
 </head>
 <body>
 <div id="menu-container"></div>
@@ -33,19 +34,15 @@
       <div class="gallery-item" data-src="photos/portraits/ethan/ethan15.jpg"><img src="photos/portraits/ethan/ethan15.jpg" alt="Ethan 15"></div>
     </div>
   </section>
-  <footer>
-    <a href="portraits.html" style="color: var(--accent); text-decoration: none;">Retour aux Portraits</a>
-  </footer>
+  <footer id="footer-container"></footer>
+
   <!-- Lightbox -->
   <div id="lightbox">
     <button id="prevBtn" class="lightbox-btn">&#10094;</button>
     <img src="" alt="">
     <button id="nextBtn" class="lightbox-btn">&#10095;</button>
   </div>
-  <script src="menu.js"></script>
-  <script src="lightbox.js"></script>
-  <script src="footer.js"></script>
-  <script src="keyboard-control.js"></script>
-  <script src="media-protect.js"></script>
+  <script src="js/main.js"></script>
+
 </body>
 </html>
