--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portfolio – Yann RICHARD</title>
-  <link rel="stylesheet" href="styles.css" />
-  <link rel="stylesheet" href="menu.css" />
-  <link rel="stylesheet" href="video-halo.css">
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="css/menu.css" />
+  <link rel="stylesheet" href="css/video-halo.css">
 
 </head>
 <body>
@@ -98,12 +98,6 @@
   </div>
 
   <!-- Scripts -->
-  <script src="menu.js"></script>
-  <script src="halo.js"></script>
-  <script src="lightbox.js"></script>
-  <script src="footer.js"></script>
-  <script src="video-light.js"></script>
-  <script src="keyboard-control.js"></script>
-  <script src="media-protect.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
