--- a/lajava.html
+++ b/lajava.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Yann Portfolio Automobile - GP Explorer</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="menu.css">
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="css/menu.css" />
+  <link rel="stylesheet" href="css/video-halo.css">
 </head>
 <body>
 <div id="menu-container"></div>
@@ -46,19 +46,15 @@
   </div>
 </section>
 
-  <footer>
-    <a href="concert.html" style="color: var(--accent); text-decoration: none;">Retour aux concerts</a>
-  </footer>
+  <footer id="footer-container"></footer>
+
   <!-- LighStbox -->
   <div id="lightbox">
     <button id="prevBtn" class="lightbox-btn">&#10094;</button>
     <img src="" alt="">
     <button id="nextBtn" class="lightbox-btn">&#10095;</button>
   </div>
-  <script src="menu.js"></script>
-  <script src="lightbox.js"></script>
-  <script src="footer.js"></script>
-  <script src="keyboard-control.js"></script>
-  <script src="media-protect.js"></script>
+  <script src="js/main.js"></script>
+
 </body>
 </html>
