--- a/videoauto.html
+++ b/videoauto.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vidéos Automobile – Yann RICHARD</title>
 
-  <link rel="stylesheet" href="styles.css" />
-  <link rel="stylesheet" href="menu.css" />
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="css/menu.css" />
   <link rel="stylesheet" href="video-halo.css" />
 </head>
 
@@ -59,13 +59,6 @@
   <footer id="footer-container"></footer>
 
   <!-- Scripts -->
-  <script src="menu.js"></script>
-  <script src="halo.js"></script>
-  <script src="lightbox.js"></script>
-  <script src="footer.js"></script>
-  <script src="video-light.js"></script>
-  <script src="keyboard-control.js"></script>
-  <script src="media-protect.js"></script>
-  <script src="video-container.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
