--- a/lajava.html
+++ b/lajava.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Concert – La Java</title>
   <link rel="stylesheet" href="css/styles.css" />
   <link rel="stylesheet" href="css/menu.css" />
   <link rel="stylesheet" href="css/video-halo.css">
