--- a/videoauto.html
+++ b/videoauto.html
@@ -7,7 +7,7 @@
 
   <link rel="stylesheet" href="css/styles.css" />
   <link rel="stylesheet" href="css/menu.css" />
-  <link rel="stylesheet" href="video-halo.css" />
+  <link rel="stylesheet" href="css/video-halo.css" />
 </head>
 
 <body>
