halo fix + aftermovies add

--- a/video.html
+++ b/video.html
@@ -16,14 +16,18 @@
   </header>
 
   <section>
-    <h2>Mes Portraits</h2>
+    <h2>Mes vidéos</h2>
     <div class="categories">
       <div class="cat-card" onclick="window.location.href='videoauto.html';">
         <img src="photos/cover/videoauto.jpg" alt="Videoautomobile" />
         <div class="overlay"></div>
         <div class="cat-name">Vidéo Automobile</div>
       </div>
-      <!-- Ajoutez d'autres portraits ici -->
+      <div class="cat-card aftermovie-cover" data-video-src="videos/aftermovies.mp4" onclick="window.location.href='aftermovies.html';">
+        <img src="photos/cover/aftermovies-cover.jpg" alt="Aftermovies" />
+        <div class="overlay"></div>
+        <div class="cat-name">After Movies</div>
+      </div>
     </div>
   </section>
   <footer id="footer-container"></footer>
