--- a/videoauto.html
+++ b/videoauto.html
@@ -18,7 +18,7 @@
   <!-- Header -->
   <header>
     <h1 class="site-title">Automobile</h1>
-    <p class="subtitle">Captations & formats vidéo</p>
+    <p class="subtitle">Circuits, réels, trends...</p>
   </header>
 
   <!-- Section vidéos -->
@@ -29,28 +29,36 @@
 
       <!-- Vidéo 1 -->
       <div class="video-item">
-        <div class="video-container video-strong">
+        <div class="video-container">
           <video controls preload="metadata" poster="photos/cover/e30sqy-cover.jpg">
             <source src="videos/auto/e30sqy.mp4" type="video/mp4" />
           </video>
           <div class="halo"></div>    
         </div>
-        <p class="video-title">E30 </p>
+        <p class="video-title">BMW E30 323i</p>
       </div>
 
       <!-- Vidéo 2 -->
       <div class="video-item">
-        <div class="video-container video-strong">
+        <div class="video-container">
           <video controls preload="metadata" poster="photos/cover/sqylavage-cover.jpg">
             <source src="videos/auto/sqylavage.mp4" type="video/mp4" />
           </video>
           <div class="halo"></div>
         </div>
-        <p class="video-title">Teaser – Événement Auto</p>
+        <p class="video-title">Teaser - Rassemblement Automobile</p>
       </div>
 
       <!-- Vidéo 3 -->
- 
+      <div class="video-item">
+        <div class="video-container">
+          <video controls preload="metadata" poster="photos/cover/videocircuit-cover.jpg">
+            <source src="videos/auto/CircuitLurcyLevis.mp4" type="video/mp4" />
+          </video>
+          <div class="halo"></div>
+        </div>
+        <p class="video-title">Track Day - Lurcy Levis</p>
+      </div> 
 
     </div>
   </section>
