--- a/aftermovies.html
+++ b/aftermovies.html
@@ -34,7 +34,7 @@
             <source src="videos/aftermovies/obscuraAfterM1.mp4" type="video/mp4" />
           </video>
           <div class="halo"></div>    
-        </div>
+        </div><br>
         <p class="video-title">BDE Obscura - Movie Night</p>
       </div>
 
