--- a/ethan.html
+++ b/ethan.html
@@ -43,6 +43,6 @@
     <button id="nextBtn" class="lightbox-btn">&#10095;</button>
   </div>
   <script src="js/main.js"></script>
-
+ <script src="js/lightbox.js"></script>
 </body>
 </html>
